force-app/main/default/objects/Stress_First_Aid__c/Stress_First_Aid__c.object-meta.xml
<CustomObject>
    <label>Stress First Aid Training</label>
    <nameField>
        <displayFormat>SFA-{0000}</displayFormat>
        <label>Stress First Aid Training</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stress First Aid Training</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>