force-app/main/default/objects/Stress_First_Aid__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Stress_First_Aid</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>