force-app/main/default/objects/Stress_First_Aid__c/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <label>Cohort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cohort 5 - 2021 Summer</fullName>
            </value>
            <value>
                <fullName>Cohort 4</fullName>
                <label>Cohort 4 - 2021 Spring</label>
            </value>
            <value>
                <fullName>Cohort 3 - 2021 Winter</fullName>
            </value>
            <value>
                <fullName>Cohort 2 - 2020-October</fullName>
                <label>Cohort 2 - 2020 Fall</label>
            </value>
            <value>
                <fullName>Cohort 1 - 2020-August (BRF)</fullName>
                <label>Cohort 1 - 2020 Summer (BRF)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>