force-app/main/default/objects/Stress_First_Aid__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>