force-app/main/default/objects/Stress_First_Aid__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Stress_First_Aid</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>