force-app/main/default/objects/Stress_First_Aid__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stress First Aid Basics Webinar</fullName>
            </value>
            <value>
                <fullName>Stress FIrst Aid TTT Informational Webinar</fullName>
            </value>
            <value>
                <fullName>Stress First Aid for Healthcare Workers Train the Trainer Course</fullName>
            </value>
            <value>
                <fullName>Stress First Aid for Healthcare Workers - Train the Trainer - Fall 2020</fullName>
                <label>OLD-Stress First Aid for Healthcare Workers - Train the Trainer - Fall 2020</label>
            </value>
            <value>
                <fullName>Stress First Aid for Healthcare Workers - Train the Trainer v.4</fullName>
                <label>OLD-Stress First Aid for Healthcare Workers - Train the Trainer v.4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>