force-app/main/default/objects/Stress_First_Aid__c/fields/SFA_Team_Role__c.field-meta.xml
<CustomField>
    <fullName>SFA_Team_Role__c</fullName>
    <label>SFA Team Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SFA Clinical Leader</fullName>
            </value>
            <value>
                <fullName>SFA Trainer</fullName>
            </value>
            <value>
                <fullName>SFA Peer Support</fullName>
            </value>
            <value>
                <fullName>SFA Organizational Leader</fullName>
            </value>
            <value>
                <fullName>SFA Program Coordinator</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>