force-app/main/default/objects/Stress_First_Aid__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Date Started</label>
    <type>Date</type>
</CustomField>