force-app/main/default/objects/Stress_First_Aid__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boston Resiliency Fund (LU)</fullName>
            </value>
            <value>
                <fullName>SFA Webinar (website)</fullName>
            </value>
            <value>
                <fullName>SFA Train the Trainer (LU)</fullName>
            </value>
            <value>
                <fullName>SFA Info Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>